# innerwarden

./: .env.example  .gitignore  .gitleaksignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  SPEC.md  agent-ollama-test.toml  agent-test.toml  config.example.toml  config.test.toml  deny.toml  install.sh  registry.toml
.claude/: CLAUDE.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: canary.yml  ci.yml  release.yml  security.yml  stale.yml  validate-modules.yml
crates/agent/: Cargo.toml
crates/agent-guard/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: audit.rs  entities.rs  lib.rs
crates/ctl/: Cargo.toml
crates/sensor/: Cargo.toml
crates/sensor-ebpf/: Cargo.toml  test-load.sh
docker/: Dockerfile.agent  Dockerfile.agent-openclaw  agent.env.example  docker-compose.yml
docs/: README.md  agent-capabilities.md  configuration.md  format.md  index.md  integration-recipes.md  module-authoring.md  phase-8-honeypot-hardening.md  phase-8-honeypot-rebuild-foundation.md  phase-d5-attacker-path-viewer.md  privacy.md  sensor-capabilities.md
docs/innerwarden-gym/: README.md
docs/internal/: iso-27001-mapping.md  wiki-agent-update.md
docs/mascot/: preview.html
examples/: allowlist.toml
examples/cron/: innerwarden-narrate.cron
examples/systemd/: innerwarden-agent.service  innerwarden-sensor.service  innerwarden.service
integrations/: README.md
integrations/openclaw/: SKILL.md
integrations/osquery/: recipe.toml
integrations/wazuh/: recipe.toml
modules/abuseipdb-enrichment/: module.toml
modules/execution-guard/: module.toml
modules/file-integrity/: module.toml
modules/geoip-enrichment/: module.toml
modules/openclaw-protection/: module.toml
modules/wazuh-integration/: module.toml
scripts/: capture_dashboard_previews.sh  deploy-prod.sh  gen_fake_data.py  ops-check.sh  replay_qa.sh
specs/api/: agent_api.yml  live_feed.yml
specs/collectors/: auth_log.yml  cloudtrail.yml  dns_capture.yml  docker.yml  ebpf_syscall.yml  exec_audit.yml  falco_log.yml  fanotify_watch.yml  firmware_integrity.yml  (+13 more)
(+352 files in other folders)
