[workspace]
members = [
  "crates/core",
  "crates/sensor",
  "crates/agent",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/maiconesteves/innerwarden"
homepage = "https://github.com/maiconesteves/innerwarden"
readme = "README.md"
