[workspace]
members = [
  "crates/core",
  "crates/sensor",
  "crates/agent",
  "crates/ctl",
  "crates/sensor-ebpf-types",
  "crates/agent-guard",
]
exclude = ["crates/sensor-ebpf"]
# crates/sensor-ebpf compiles to bpfel-unknown-none target (separate build)
resolver = "2"

[workspace.package]
version = "0.8.2"
edition = "2021"
license = "BUSL-1.1"
repository = "https://github.com/InnerWarden/innerwarden"
homepage = "https://www.innerwarden.com"
readme = "README.md"
